# Pensaer-BIM

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONSTRUCTION_BIBLE.md  DEMO_COMMANDS.txt  DEMO_SCRIPT.md  GAPS.md  HOUSE_TUTORIAL.md  LICENSE  MEMORY.md  PRD.md  PROJECTS.md  README.md  SELF_HEALING_IMPLEMENTATION_SUMMARY.md  TEST_REPORT.md  TOWER_BUILDING_README.md  USER.md  _check2.py  _check3.py  _check4.py  _check5.py  _check_results.py  _test_b21.py  _test_import.py  build_bindings.ps1  docker-compose.yml  fly.toml  impressive_tower_builder.py  test_roof.py  test_selection.py  test_selection_mcp.py  tmp_regen.json  tower_builder.py
.claude/: settings.json  settings.local.json
.github/: pull_request_template.md
app/: .claude_settings.json  .dockerignore  .linear_project.json  CLAUDE.md  Dockerfile  SELF_HEALING_QUICKSTART.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vitest.config.ts
clawhatch/: CLAUDE.md
clawset/: BUSINESS-PLAN.md  CONVERSION-OPTIMIZATION.md  FAST-MONEY-PLAYBOOK.md  FIVERR-LAUNCH-GUIDE.md  FIVERR-READY.md  IMPLEMENTATION.md  MISSION-CONTROL.md  MORNING-BRIEFING-FEB3.md  OUTREACH-TARGET-LIST.md  SPRINT-PLAN.md  STRATEGIC-SUMMARY.md  TASK-LIST.md  TOWN-HALL-VERDICT.md  WEEK-1-PROGRESS.md  manual-setup-checklist.md  (+3 more)
kernel/: CLAUDE.md  Cargo.toml  Dockerfile  README.md  pensaer-kernel-stub.rs
kernel/pensaer-crdt/: Cargo.toml
kernel/pensaer-crdt/src/: lib.rs
kernel/pensaer-geometry/: Cargo.toml  pyproject.toml
kernel/pensaer-geometry/src/: constants.rs  element.rs  error.rs  exec.rs  io.rs  lib.rs
kernel/pensaer-geometry/src/bindings/: functions.rs  mod.rs  types.rs
kernel/pensaer-geometry/src/elements/: floor.rs  mod.rs  opening.rs  roof.rs  room.rs  wall.rs
kernel/pensaer-geometry/src/fixup/: mod.rs
kernel/pensaer-geometry/src/joins/: detect.rs  miter.rs  mod.rs
kernel/pensaer-geometry/src/mesh/: extrude.rs  mod.rs  triangulate.rs
kernel/pensaer-geometry/src/spatial/: clash.rs  edge_index.rs  mod.rs  node_index.rs  predicates.rs
kernel/pensaer-geometry/src/topology/: edge.rs  graph.rs  mod.rs  node.rs  room.rs
kernel/pensaer-geometry/src/util/: float.rs  mod.rs
kernel/pensaer-ifc/: Cargo.toml
kernel/pensaer-ifc/src/: error.rs  export.rs  import.rs  lib.rs  mapping.rs
kernel/pensaer-math/: Cargo.toml
kernel/pensaer-math/proptest-regressions/: robust_predicates.txt
kernel/pensaer-math/src/: bbox.rs  error.rs  guards.rs  lib.rs  line.rs  point.rs  polygon.rs  robust_predicates.rs  transform.rs  vector.rs
(+569 files in other folders)
