[workspace]
members = [
  "pensaer-math",
  "pensaer-geometry",
  "pensaer-crdt",
  "pensaer-ifc",
]
resolver = "2"

[workspace.dependencies]
uuid = { version = "1.6", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
pyo3 = { version = "0.22", features = ["extension-module"] }
