[workspace]
members = [
  "pensaer-math",
  "pensaer-geometry",
  "pensaer-crdt",
  "pensaer-ifc",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pensaer/pensaer-bim"

[workspace.dependencies]
uuid = { version = "1.6", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
pyo3 = { version = "0.22", features = ["extension-module"] }
