[package]
name = "pensaer-ifc"
version = "0.1.0"
edition = "2021"
description = "IFC import/export for Pensaer BIM"
license = "Apache-2.0"

[lib]
path = "src/lib.rs"

[dependencies]
# IFC parsing and writing
ifc_rs = "0.1.0-alpha.9"

# Core types from other Pensaer crates
pensaer-math = { path = "../pensaer-math" }

# Utilities
uuid = { version = "1.7", features = ["v4", "serde"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
